--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To My Website!</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
@@ -94,7 +93,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Experience</h2>
-                    <h3 class="section-subheading text-muted"> I am a young and driven developer with a constant desire to learn more and advance my knowledge. I am always up for a challenge which web development provides the perfect medium for.</h3>
+                    <h3 class="section-subheading text-muted"> I am a young and driven developer with a constant desire to learn more and advance my knowledge. I am always up for a challenge which web development provides the perfect medium for.  Below is some of what we covered, and the ones that interested me most. </h3>
                 </div>
             </div>
             <div class="row text-center">
