--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         </div>
     </section>
 
-    <section id="contact">
+    <!-- <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -337,21 +337,19 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <footer>
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Your Website 2014</span>
+                    <span class="copyright">Copyright &copy; Ellie McGregor 2014</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="https://twitter.com/elliemcgregor1"><i class="fa fa-twitter"></i></a>
+                        <li><a href="https://github.com/EllieMcGregor"><i class="fa fa-github"></i></li></a> 
+                        <li><a href="https://www.linkedin.com/profile/view?id=375555332&trk=nav_responsive_tab_profile_pic"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
