--- a/index.html
+++ b/index.html
@@ -65,10 +65,7 @@
                         <a class="page-scroll" href="#about">Background</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Online Networks</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#team">Contact </a>
                     </li>
                 </ul>
             </div>
@@ -271,8 +268,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">My links </h2>
-                    <h3 class="section-subheading text-muted">Feel free to browse around. </h3>
+                    <h2 class="section-heading">Ways of contacting me </h2>
+                    <h3 class="section-subheading text-muted">Feel free to browse around the links </h3>
                 </div>
             </div>
             <div class="row">
