--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Experience</h2>
-                    <h3 class="section-subheading text-muted"> I am a young and driven developer with a constant desire to learn more and advance my knowledge. I am always up for a challenge which web development provides the perfect medium for.  Below is some of what we covered, and the ones that interested me most. </h3>
+                    <h3 class="section-subheading text-muted"> I am a young and driven developer with a constant desire to learn more and advance my knowledge. I am always looking for a challenge which web development provides the perfect medium for.  Below are some of my favourite things that I covered in my 12 week course at General Assembly. </h3>
                 </div>
             </div>
             <div class="row text-center">
