--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Experience</h2>
-                    <h3 class="section-subheading text-muted"> I am a young and driven developer with a constant desire to learn more and advance my knowledge. I am always looking for a challenge which web development provides the perfect medium for.  Below are some of my favourite things that I covered in my 12 week course at General Assembly. </h3>
+                    <h3 class="section-subheading text-muted"> I am a young and driven developer with a constant desire to learn more and advance my knowledge. I am always looking for a challenge which web development provides the perfect medium for. Below are some of my favourite things that I covered in my 12 week course at General Assembly. </h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -111,7 +111,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-paint-brush fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">CSS</h4>
                 </div>
