--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-magic fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Ruby</h4>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-rocket fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">JavaScript</h4>
                 </div>
