--- a/index.html
+++ b/index.html
@@ -382,8 +382,6 @@
                             <h2>GA Schedule Planner</h2>
                             <p class="item-intro text-muted">This was my first project, it's not pretty but it was a solid rails app.  And represents how far I've come.</p>
                             <img class="img-responsive" src="img/portfolio/project-one.png" alt="">
-                            <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-
                             <ul class="list-inline">
                                 <li><a href="https://github.com/EllieMcGregor/project_1">GitHub</i></a>
                                 <li><strong>Created: </strong> December 2014</li>
@@ -412,7 +410,6 @@
                             <h2>Productive Coffee</h2>
                             <p class="item-intro text-muted">An App to help coffee lovers get connected with coffee near them.</p>
                             <img class="img-responsive img-centered" src="img/portfolio/project-two.png" alt="">
-                            <p><a href="http://designmodo.com/startup/?u=787">Startup Framework</a> is a website builder for professionals. Startup Framework contains components and complex blocks (PSD+HTML Bootstrap themes and templates) which can easily be integrated into almost any design. All of these components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions for your future projects.</p>
                             <ul class="list-inline">
                                 <li><a href="https://github.com/EllieMcGregor/project_2_productive_coffee">GitHub</i></a>
                                 <li><strong>Created: </strong> January 2014</li>
@@ -442,7 +439,7 @@
                             <h2>What's In Your Fridge?</h2>
                             <p class="item-intro text-muted">My Final Project.</p>
                             <img class="img-responsive img-centered" src="img/portfolio/project-three.png" alt="">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis aperiam maiores obcaecati ab sed, nobis similique voluptatibus atque, libero esse reiciendis corporis et. Repudiandae quis, fugit doloribus vitae nulla incidunt!</p>
+                            <p>This web application helps you can keep track of what’s in your fridge and use suggested recipes to cook a meal before your food goes off. This app saves you money, reduces waste, and helps keep track of your calorie intake.</p>
                             <ul class="list-inline">
                                 <li><a href="https://quiet-plains-8205.herokuapp.com/">Heroku</i></a>
                                 <li><strong>Created: </strong> February 2014</li>
@@ -470,9 +467,9 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Homeless Or Hipster?</h2>
-                            <p class="item-intro text-muted">When at our offices I often got confused as to whether someone was homeless, or just Hipster.  Therefore I devised a game to see if others had the same problem distinguishing between the two.</p>
+                            <p class="item-intro text-muted">Hackathon</p>
                             <img class="img-responsive img-centered" src="img/portfolio/hackathon.png" alt="">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit perferendis temporibus enim, maxime expedita quo rerum consequatur suscipit nam sequi dolorum perspiciatis autem aliquid, et. Debitis fugiat sequi quae veniam.</p>
+                            <p class="item-intro text-muted">When at our offices I often got confused as to whether someone was homeless, or just Hipster.  Therefore I devised a game to see if others had the same problem distinguishing between the two.</p>
                             <ul class="list-inline">
                                 <li><a href="https://github.com/EllieMcGregor/Hackathon">GitHub</i></a>
                                 <li><strong>Created: </strong> January 2014</li>
