--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                                     <h4 class="subheading"> My time at GA </h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"> During this 12-week course I was taught a range of skills to aid my goal of becoming a full stack developer.  These skills include Ruby on Rails, JavaScript, CSS, and Html.</p>
+                                    <p class="text-muted"> During this 12-week course I was taught a range of skills to aid my goal of becoming a full stack developer.  These skills include Ruby on Rails, JavaScript, CSS, and HTML5.</p>
                                 </div>
                             </div>
                         </li>
