--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Background</h2>
-                    <h3 class="section-subheading text-muted">A little bit about what I've done the last couple of years.</h3>
+                    <h3 class="section-subheading text-muted">A little bit about what I've done over the last couple of years.</h3>
                 </div>
             </div>
             <div class="row">
@@ -253,7 +253,7 @@
                                     <h4 class="subheading"> My time at GA </h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"> During this 12-week course I was taught a range of skills to aid my goal of becoming a full stack developer.  These skills include Ruby on Rails, JavaScript, CSS, and HTML5.</p>
+                                    <p class="text-muted"> During this 12-week course I was taught a range of skills to aid my goal of becoming a full stack developer.  These skills include Ruby on Rails, JavaScript, CSS, and HTML5.  I also had a great time!</p>
                                 </div>
                             </div>
                         </li>
