--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To My Website!</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <img class="circle-logo" src="img/logos/e-logo.png" alt="">
             </div>
         </div>
     </header>
