--- a/index.html
+++ b/index.html
@@ -268,7 +268,11 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Ways of contacting me </h2>
-                    <h3 class="section-subheading text-muted">Feel free to browse around the links </h3>
+                    <h3 class="section-subheading text-muted">Feel free to browse around the links below. </h3>
+                    <h4 class="text-muted">ellie.mcgregor@gmail.com 
+                    </br>
+                    </br>
+                    +44 7739 987 218</h4>
                 </div>
             </div>
             <div class="row">
