--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Experience</h2>
-                    <h3 class="section-subheading text-muted"> I am a young and driven developer with a constant desire to learn more and advance my knowledge. I am always looking for a challenge which web development provides the perfect medium for. Below are some of my favourite things that I covered in my 12 week course at General Assembly. </h3>
+                    <h3 class="section-subheading text-muted"> I am a young and driven developer with a constant desire to learn more and advance my knowledge. I am always looking for a challenge which web development provides the perfect medium for. Below are some of my favourite things that I covered in my 12 week course at <a href="https://generalassemb.ly/london">General Assembly</a> </h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -124,7 +124,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">These are some of the projects I did in my 12 weeks at General Assembly </h3>
+                    <h3 class="section-subheading text-muted">These are some of the projects I did in my 12 weeks at General Assembly
                 </div>
             </div>
             <div class="row">
@@ -380,7 +380,7 @@
                             <img class="img-responsive" src="img/portfolio/project-one.png" alt="">
                             <p>This was my first project and I was given a week to do it.  I chose this project as it had the most associations, something which I was not confident with.  By the end of the week, and after working with seven tables, I felt it was something I had mastered. </p>
                             <ul class="list-inline">
-                                <li><a href="https://quiet-lake-9717.herokuapp.com/">Heroku</i></a>
+                                <li><a href="https://quiet-lake-9717.herokuapp.com/">Heroku</a>
                                 <li><strong>Created: </strong> December 2014</li>
                             </ul>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
